--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,8 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 2rem 2rem;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 @media (max-width: 700px) {
